# rust-mistral-finetune-benchmark

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPEN_SOURCE_RELEASE.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/: rust_eval_burn_dryrun.json  rust_eval_smoke.json  rust_finetune_eval_all.json  rust_finetune_leaderboard_20.md  rust_finetune_technical_leaderboard.md  rust_infer_deepseek-r1_8b_limit10_temp0.0_toks64.json  rust_infer_deepseek-r1_8b_limit10_temp0.2_toks120.json  rust_infer_deepseek-r1_8b_limit10_temp0.7_toks120.json  rust_infer_qwen3_latest_limit10_temp0.0_toks64.json  rust_infer_qwen3_latest_limit10_temp0.2_toks120.json  rust_infer_qwen3_latest_limit10_temp0.7_toks120.json  rust_infer_real_report_20.json  rust_infer_real_report_20_deepseek.json  rust_infer_real_report_20_gptoss.json  rust_infer_real_report_80.json  rust_tech_sweep_limit10.md
artifacts/all-backend-comparison/: all_backend_comparison_leaderboard.md  all_backend_comparison_report.json
artifacts/backend-comparison/: true_backend_comparison_leaderboard.md  true_backend_comparison_report.json
artifacts/burn-true-pre-post/: run_manifest.json  (+2 more)
data/: rust_finetune_manifest.yaml  valid_mistral.jsonl
docs/: README.md
scripts/: ollama_infer.sh  true_pre_post_common.py  true_pre_post_mlx.py  true_pre_post_pytorch.py
src/: backend_runtime.rs  burn_backend.rs  candle_backend.rs  lib.rs  main.rs
(+29 files in other folders)
