[package]
name = "mistral-fintune"
version = "0.1.0"
edition = "2024"
description = "Local fine-tuning benchmark across Candle, Burn, PyTorch, and MLX"
license = "MIT"
readme = "README.md"
keywords = ["llm", "finetuning", "benchmark", "mlx", "candle"]
categories = ["command-line-utilities", "science"]

[features]
default = []
candle = ["dep:accelerate-src", "dep:candle-core", "dep:candle-nn"]
burn = ["dep:burn"]

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "train", "ndarray", "accelerate"], optional = true }
candle-core = { version = "0.10.2", features = ["accelerate"], optional = true }
candle-nn = { version = "0.10.2", features = ["accelerate"], optional = true }
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
